--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     restart: "unless-stopped"
     shm_size: "2gb"
     ports:
-      - "8090:8090"
-      
+      - "8080:8080"
+      - "52000-52100:52000-52100/udp"
     environment:
       NEKO_SCREEN: 1920x1080@30
       NEKO_PASSWORD: neko
