--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   neko:
-    image: "murugan1502/edgebrowser:latest"
+    image: "murugan1502/edgebrowsertest:latest"
     restart: "unless-stopped"
     shm_size: "2gb"
     ports:
